export type Category = {
    label: string
}
