
import java.util.*;

/**
 * 
 */
public class Admin extends User {

    /**
     * Default constructor
     */
    public Admin() {
    }

    /**
     * 
     */
    public void Attribute1;

    /**
     * @return
     */
    public ArrayList<Consumer> seeAllConsumer() {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public ArrayList<Seller> seeAllSeller() {
        // TODO implement here
        return null;
    }

}