
import java.util.*;

/**
 * 
 */
public class Consumer extends User {

    /**
     * Default constructor
     */
    public Consumer() {
    }

    /**
     * 
     */
    public void Attribute1;


    /**
     * @return
     */
    public ArrayList<Basket> consultBasket() {
        // TODO implement here
        return null;
    }

    /**
     * @param String 
     * @return
     */
    public Order consultOrderDetails(void String) {
        // TODO implement here
        return null;
    }

    /**
     * @param String 
     * @return
     */
    public Seller consultSellerInformation(void String) {
        // TODO implement here
        return null;
    }

}