
import java.util.*;

/**
 * 
 */
public class Seller extends User {

    /**
     * Default constructor
     */
    public Seller() {
    }

    /**
     * 
     */
    private String companyName;


    /**
     * @return
     */
    public float getAverageRate() {
        // TODO implement here
        return 0.0f;
    }

    /**
     * @return
     */
    public ArrayList<Comment> getComments() {
        // TODO implement here
        return null;
    }

}