package CodeLogin.LoginPackage;

import java.util.*;

/**
 * 
 */
public class User {

    /**
     * Default constructor
     */
    public User() {
    }

    /**
     * 
     */
    private String Login;

    /**
     * 
     */
    private void FirstName;

    /**
     * 
     */
    private String LastName;

    /**
     * 
     */
    private String Password;

    /**
     * 
     */
    private String EmailAddress;

    /**
     * 
     */
    private String StreetAddress;

    /**
     * 
     */
    private String City;

    /**
     * 
     */
    private String PostalCode;

    /**
     * 
     */
    private String PictureUser;

    /**
     * 
     */
    public void Attribute1;

    /**
     * 
     */
    public void Attribute2;

    /**
     * 
     */
    private String role;



    /**
     * @return
     */
    public void login() {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public void signUp() {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public void updateInformation() {
        // TODO implement here
        return null;
    }

    /**
     * @param String 
     * @return
     */
    public ArrayList<Product> searchProducts(void String) {
        // TODO implement here
        return null;
    }

    /**
     * @param String 
     * @return
     */
    public ArrayList<Categroy> seeAllCategories(void String) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public void deleteAccount() {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public ArrayList<Order> consultHistoricOrder() {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getLogin() {
        // TODO implement here
        return "";
    }

    /**
     * @param login 
     * @return
     */
    public void setLogin(String login) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getFirstName() {
        // TODO implement here
        return "";
    }

    /**
     * @param firstName 
     * @return
     */
    public void setFirstName(String firstName) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getLastName() {
        // TODO implement here
        return "";
    }

    /**
     * @param lastName 
     * @return
     */
    public void setLastName(String lastName) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getPassword() {
        // TODO implement here
        return "";
    }

    /**
     * @param password 
     * @return
     */
    public void setPassword(String password) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getEmailAddress() {
        // TODO implement here
        return "";
    }

    /**
     * @param emailAddress 
     * @return
     */
    public void setEmailAddress(String emailAddress) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getCity() {
        // TODO implement here
        return "";
    }

    /**
     * @param city 
     * @return
     */
    public void setCity(String city) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getPostalCode() {
        // TODO implement here
        return "";
    }

    /**
     * @param postalCode 
     * @return
     */
    public void setPostalCode(String postalCode) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getPictureUser() {
        // TODO implement here
        return "";
    }

    /**
     * @param pictureUser 
     * @return
     */
    public void setPicureUser(String pictureUser) {
        // TODO implement here
        return null;
    }

    /**
     * @return
     */
    public String getRole() {
        // TODO implement here
        return "";
    }

    /**
     * @param role 
     * @return
     */
    public void setRole(String role) {
        // TODO implement here
        return null;
    }

}