@startuml

class User {
    - Login : String
    - FirstName : String
    - LastName : String
    - Password : String
    - EmailAddress : String
    - PhoneNumber : String
    - StreetAddress : String
    - City : String
    - PostalCode : int
    - PictureUser : String
    ..
    + login() : void
    + signUp() : void
    + updateInformation() : void
    + searchProducts(String) : ArrayList<Product>
    + seeAllCategories(String) : ArrayList<Category>
    + deleteAccount() : void
    + consultHistoricOrder() : ArrayList<Order>
}

class Consumer {
    ..
    + consultBaskets() : ArrayList<Basket>
    + consultOrderDetails(String) : Order
    + consultSellerInformation(String) : Seller
}

class Seller {
    - CompanyName : String
    ..
    + getAverageRate() : float
    + getComments() : ArrayList<Comment>
}

class Admin {
    ..
    + seeAllConsumer() : ArrayList<Consumer>
    + seeAllSeller() : ArrayList<Seller>
}

class Comment {
    - ContentComment : String
    ..
    + createComment() : void
    + updateComment() : void
    + deleteComment() : void
    // + getWriter() : Consumer
}

class Rate {
    - rate : int
    ..
    + createRate() : void
}

class Product {
    - nameProduct : String
    - descriptionProduct : String
    - priceProduct : float
    - pictureProduct : String
    ..
    + getAverageRate() : float
    //+ getComments() : ArrayList<Comment>
    //+ getSeller() : Seller
    //+ getCategories() : ArrayList<Category>
    + updateProduct() : void
    + createProduct() : void
    + deleteProduct() : void
}

class Category {
    - libelleCategory : String
    ..
    + createCategory() : void
    + updateCategory() : void
    + deleteCategory() : void
}

class Order {
    - quantity : int
    - dateOrder : Date
    - deliveryDate : Date
    - deliveryAddress : String
    // soit celle du consumer soit du seller
    - stateOrder : String
    ..
    + createOrder() : void
    + updateOrder() : void
}

class Basket {
    - quantity : int
    ..
    + addProduct() : void
    + emptyBasket() : boolean
    + changeQuantity(int) : void
    + deleteProductFromBasket() : void
}

User <|-- Consumer
User <|-- Seller
User <|-- Admin

Consumer "*" --- "1" Product
(Consumer, Product) .. Comment

Consumer "*" --- "1" Product
(Consumer, Product) .. Rate

Consumer "1" --- "1" Seller
(Consumer, Seller) .. Rate

Product "*" --o "*" Category : Contains
Product "*" --- "1" Seller : Belongs

Order "*" --- "1" Consumer
Order "*" --- "1" Seller
Order "*" --- "*" Product

Basket "*" -- "1" Product
Basket "*" --- "1" Consumer


@enduml

// où mettre searchProduct() ?
// où mettre seeAllCategories() ?
// demander au prof si on doit mettre les get...